# OnyxThorn

./: .gitignore  LICENSE  README.md
branding/configure/: configure.sh  moz.build
branding/locales/en-US/: brand.dtd  brand.ftl  brand.properties
branding/locales/ru/: brand.dtd  brand.ftl  brand.properties
branding/pref/: firefox-branding.js  local-settings.js  onyxthorn.cfg
chrome/: jar.mn
chrome/content/: bridge.js
chrome/content/download/: download.css  download.html  (+1 more)
chrome/modules/: OnyxThornSync.sys.mjs  OnyxThornUpdater.sys.mjs
chrome/skin/: userChrome.css  userContent.css
docs/: ARCHITECTURE.md  BUILD.md  SYNC_PROTOCOL.md  VPS_SETUP.md
installer/nsis/: onyxthorn.nsi
mozconfig/: mozconfig-linux  mozconfig-macos  mozconfig-windows
patches/: 0001-onyxthorn-branding.patch  0002-onyxthorn-default-search-duckduckgo.patch  0003-onyxthorn-disable-telemetry.patch  0004-onyxthorn-register-services-modules.patch  0005-onyxthorn-welcome-and-firstrun.patch  0006-onyxthorn-load-bridge-script.patch  0007-onyxthorn-panelmenu-overlay.patch  0008-onyxthorn-downloads-panel.patch  0009-onyxthorn-user-agent.patch  0010-onyxthorn-strip-pocket.patch  series
scripts/: apply-patches.sh  bootstrap-windows.bat  build-linux.sh  build-windows.bat
server/: README.md  pyproject.toml
server/app/: __init__.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
server/app/routers/: auth.py  backup.py  profile.py  sync.py
server/deploy/: install.sh
server/onyxthorn_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+12 files in other folders)
