[project]
name = "onyxthorn-sync"
version = "0.1.0"
description = "OnyxThorn sync server — self-hosted backend for OnyxThorn browser."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL-2.0" }
authors = [{ name = "OnyxThorn", email = "build@onyxthorn.example" }]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic[email]>=2.5",
  "email-validator>=2.0",
  "pydantic-settings>=2.1",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.19",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "argon2-cffi>=23.1",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.7",
  "httpx>=0.27",
  "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.9",
]

[project.scripts]
onyxthorn-sync = "app.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
